# stock-dashboard-mvp

./: .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml
.github/workflows/: fetch-demo-data.yml  pages.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  render.yaml  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/core/: cache.py  config.py  dependencies.py
backend/app/fetchers/: base.py  twse.py  yahoo.py
backend/app/models/: stock.py
backend/app/processors/: technical.py
backend/app/routers/: __init__.py  market.py  stock.py  stocks.py
backend/app/scheduler/: jobs.py
backend/app/schemas/: common.py  responses.py
backend/app/scripts/: seed_stocks.py
backend/app/services/: market_service.py  stock_service.py
backend/app/utils/: ticker.py
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: DashboardClient.tsx  StockChart.tsx  StockSearch.tsx  api.ts  publicApis.ts  types.ts
frontend/public/data/: stocks.json  taiex.json  us-indices.json
scripts/: fetch-demo-data.mjs
spec/: openapi.yaml  redis-keys.md  schema.sql
