[project]
name = "stock-dashboard-backend"
version = "0.1.0"
description = "FastAPI backend for Stock Dashboard MVP"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "httpx>=0.27",
  "pandas>=2.2",
  "numpy>=2.0",
  "yfinance>=0.2.40",
  "redis>=5.0",
  "SQLAlchemy>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "python-dateutil>=2.9",
  "APScheduler>=3.10",
]

[tool.uvicorn]
factory = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
